# AgentPrecept

./: .cm  .gitignore  ACKNOWLEDGMENTS.md  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  SKILL.md  SUPPORT.md  _test_mcp.py  build-data.ps1  init.ps1  init.sh  pyproject.toml  setup.cfg
agent_compass/: __init__.py  cli.py  mcp_server.py
agent_compass.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
agentprecept/: __init__.py  basic_audit.py  cli.py  gnhf_task.py  graph_to_mermaid.py  mcp_server.py  ripple_check.py  sync_graph.py
docs/: AUDIT_REPORT.md  HANDOFF.md  INDEX.md  L1_A01_quickstart_快速开始.md  L1_B01_glossary_术语表.md  L1_C01_phased-plan_实施路线.md  L2_D01_architecture_架构设计.md  L4_M01_changelog_变更日志.md  L4_O01_design-rationale_设计依据.md  gnhf-task-template.md  mcp-tools.md  project-graph.yaml
examples/: first-run.md  prompt-templates.md
methodology/: 00-lifecycle.md  01-why-docs-first.md  02-naming-is-navigation.md  03-design-rationale.md  04-audit-framework.md  05-handoff-pattern.md  06-three-layer-graph.md  07-dev-workflow.md  08-engineering.md  09-security.md  10-performance.md  11-existing-project.md  12-human-agent-collaboration.md  13-agent-self-management.md  14-production-readiness.md  15-agent-ops.md  INDEX.md  M3_C04_engineering_工程化实践.md
reference/: README.md  cheatsheet.md  comparison.md  six-layer-graph.md
scripts/: README.md  basic-audit.py  build-data.ps1  design_gate_check.py  init.ps1  init.sh  sync-graph.py
skills/: architecture-design.md  (+1 more)
(+21 files in other folders)
